Feita a refatoração em specification e finalizado a parte de category import
