# src/routes/categories.routes.ts
@@ -2,8 +2,8 @@ import { Router } from 'express';
 import multer from 'multer';
 
 import { CreateCategoryController } from '../modules/cars/useCases/category/createCategory/CreateCategoryController';
-import { importCategoryController } from '../modules/cars/useCases/category/importCategory';
-import { listCategoriesController } from '../modules/cars/useCases/category/listCategories';
+import { ImportCategoryController } from '../modules/cars/useCases/category/importCategory/ImportCategoryController';
+import { ListCategoriesController } from '../modules/cars/useCases/category/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
 const upload = multer({
@@ -11,6 +11,8 @@ const upload = multer({
 });
 
 const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
 categoriesRoutes.post('/', createCategoryController.handle);
 
@@ -18,8 +20,10 @@ categoriesRoutes.get('/', (request, response) => {
     return listCategoriesController.handle(request, response);
 });
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-    return importCategoryController.handle(request, response);
-});
+categoriesRoutes.post(
+    '/import',
+    upload.single('file'),
+    importCategoryController.handle
+);
 
 export { categoriesRoutes };
